kubernetes/database-deployment.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: database
spec:
  serviceName: "bot-database"
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: database
          image: ghcr.io/raporpe/axolobot-database:v0.2
          ports:
            - containerPort: 3306
              protocol: TCP
          volumeMounts:
            - name: database-pvc
              mountPath: /var/lib/mysql
