kubernetes/public-api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: public-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: public-api
  template:
    metadata:
      labels:
        app: public-api
    spec:
      containers:
        - name: public-api
          image: ghcr.io/raporpe/axolobot-public-api:v0.4.2
          ports:
            - containerPort: 8080
              protocol: TCP
