kubernetes/twitter-bot-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: twitter-bot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: twitter-bot
  template:
    metadata:
      labels:
        app: twitter-bot
    spec:
      containers:
        - name: twitter-bot
          image: ghcr.io/raporpe/axolobot-twitter-bot:v0.4
