kubernetes/neural-network-service.yml
apiVersion: v1
kind: Service
metadata:
  name: neural-network
spec:
  selector:
    app: neural-network
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
