kubernetes/public-api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: public-api-service
spec:
  selector:
    app: public-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9376
