kubernetes/ingress-controller.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: axolobot-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: api.axolobot.ml
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: public-api
                port:
                  number: 80
